...
                android:id="@+id/city_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:textColor="@color/text_tertiary"
                android:textSize="@dimen/text_caption"
                tools:text="United States" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
...
